# CMake_Task_2____

./: .gitignore  CMakeLists.txt  equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rectangular_triangle.cpp  rectangular_triangle.h  rhomb.cpp  rhomb.h  square.cpp  triangle.cpp  triangle.h
